fix x axis overflow

--- a/public/style.css
+++ b/public/style.css
@@ -209,19 +209,19 @@ nav li:first-child {
     align-items: center;
     flex-direction: column;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 1000px;
     overflow: hidden;
 }
 
 .hero-content {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 1000px;
 }
 
 .hero-content img {
-    width: 100vw;
+    width: 100%;
     height: 1000px;
     object-fit: cover;
     display: block;
